2008-12-9 yusei
* Display all selected business applications in listbox.

2008-11-13 yusei
* Start to develop version 5.4.

2008-10-14 yusei
* Start to develop version 5.3.

2008-10-02 Jerome
* Add delivery_tax_interaction workflow to update tax line when delivery line is deleted.

2008-09-16 Kazuhiko
* revise purchase_packing_list_builder and sale_packing_list_builder using new API.
* use  delivery_causality_workflow instead of invoice_causality_workflow in Internal Packing List, Purchase Packing List and Sale Packing List.

2008-09-11 Kazuhiko
* Add a script for selecting deliveries in purchase_packing_list_builder like in sale_packing_list_builder.

2008-09-10 yusei
* Update worklist action box names.

2008-09-08 yusei
* Enable template feature for Sales Order.

2008-09-04 yusei
* Update English messages.

2008-08-29 yusei
* Correct text.

2008-08-28 yusei
* Use Base_translateString or translateString instead of N_ for translation message.

2008-07-30 Jerome
Add "offered" and "rejected" state on order workflow, to manage offers.

2008-07-16 Jerome
Add worklists for diverged packing lists.

2008-07-09 Nicolas
use standard packing_list_workflow for Internal Packing Lists

2008-07-07 Nicolas
Proxify Internal Packing List

2008-06-27 yusei
* Start to develop version 5.2.

2008-06-26 yusei
* Revise version to 5.1.

2008-06-18 jerome
* ignore container state for packing list workflow transitions

2008-06-03 vincentd
* Add all rights to manager to inventory workflow(Deleted), order_workflow(Deleted, Closed, Cancelled, Open), packing_list_causality_workflow (Building, Solving) and packing_list_workflow(Deleted, Cancelled)

2008-05-26 yo
* Change the title of my_order to Priority, because only priority-related categories are displayed in Express.

2008-04-18 jerome
* Bump to version 5.0

2008-04-17 jerome
* Add new discount system, similar to new tax system.

2008-04-16 alex
* move Supplies to PDM
* push version to 1.0rc17

2008-04-14 jerome
* Add new Tax system.
